# templates

./: README.md
cpp/ExampleGrid/: CMakeLists.txt  Cell.cpp  Cell.hpp  Grid.cpp  Grid.hpp  README.md  Shape.cpp  Shape.hpp  main.cpp
cpp/ExampleParallel/: CMakeLists.txt  Timer.hpp  main.cpp
cpp/ExampleParallel/doc/: parallel-time.R  run-times-parallel-example.txt
cpp/ExampleRandomList/: CMakeLists.txt  README.md  Timer.h  mainRandomPop.cpp  mainRandomShuffle.cpp
cpp/SwigLuaExample/: .gitignore  CMakeLists.txt  README.md  building_construction.i  example.lua
cpp/SwigLuaExample/src/: Floor.cpp  Floor.hpp  Skyscraper.cpp  Skyscraper.hpp  main.cpp
dotfiles/: gedit-markdown-beamer-shortcut.txt  gedit-markdown-pdf-shortcut.txt  md2article.sublime-build  plantuml.sublime-build
dotfiles/i3/: .i3blocks.conf  battery  config
latex/: assignment-article.tex  bachelor.tex  compact-article.tex  cover_letter_english.tex  cv_moderncv_ruth_blue.tex  cv_moderncv_ruth_red.tex  krypto.tex  presentation-beamer.tex
python/: LICENSE.md  README.md  count_tags.py  document_slope_curves.py  html_parser.py  loop-directory.py  main_content.py  plot-data.py  rf-filenames-overview.py  simple_plot.py  site_data.py  stet-cal.py  stk_stats.py
r/: data-vis-scatterplot3d.Rmd  data-vis-with-r.Rmd
shell/: README.md  bash-scripting-tutorial.sh  delete-every-second-gif-frame.sh  deleteSpaces.sh  filename-dissection.sh  gedit-markdown-beamer-shortcut.txt  gedit-markdown-pdf-shortcut.txt  get_gutenberg_book.sh  infernal_script.sh  update-kiwix-bookmarks.sh
